cmake_minimum_required(VERSION 3.10)
include(CMakePrintHelpers)
set(CMAKE_CXX_COMPILER clang++-9)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -g")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -O0 -glldb -ggdb3")
project(browser_engine VERSION 1.0 DESCRIPTION "A toy browser engine" LANGUAGES CXX) 
cmake_print_variables(CMAKE_CXX_COMPILER)

add_executable(main src/main.cc include/browser_engine/node.h)
add_library(node src/node.cc include/browser_engine/node.h)
add_library(parser src/parser.cc include/browser_engine/parser.h)
set_property(TARGET main parser node PROPERTY CXX_STANDARD 17)
target_include_directories(main PUBLIC include)
target_include_directories(parser PUBLIC include)
target_include_directories(node PUBLIC include)
target_link_libraries(main PUBLIC node)
target_link_libraries(main PUBLIC parser)
include(${CMAKE_CURRENT_SOURCE_DIR}/tests/CMakeLists.txt)