set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/extern/catch)
add_library(Catch2::Catch IMPORTED INTERFACE)
set_property(TARGET Catch2::Catch PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CATCH_INCLUDE_DIR}")
add_executable(tests tests/parser_tests.cc tests/test_main.cc extern/catch/catch.hpp include/browser_engine/parser.h)
target_compile_features(tests PUBLIC cxx_std_17)
target_link_libraries(tests PUBLIC Catch2::Catch)
target_link_libraries(tests PUBLIC parser)
target_link_libraries(tests PUBLIC node)